--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "admin/tanks",
     "require": {
-        "phpunit/phpunit": "^8.2"
+        "phpunit/phpunit": "^8.2",
+        "php-ds/php-ds": "^1.2"
     },
     "authors": [
         {
